--- a/Maintenance.html
+++ b/Maintenance.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maintenance - Crane Monitor</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         /* CSS Styles */
+        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -46,20 +48,101 @@
             width: 100%;
             height: 250px;
         }
+        /* Sidebar */
+.sidebar {
+    width: 260px;
+    background: #f1caa3;
+    color: #dde0e2;
+    height: 100vh;
+    padding: 20px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    box-shadow: 4px 0 10px rgba(229, 12, 12, 0.2);
+    transition: all 0.3s ease;
+}
+
+.sidebar h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 1.8rem;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    color: #232322;
+    padding: 10px 0;
+    border-bottom: 3px solid #272926;
+}
+
+/* Sidebar Navigation */
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar ul li {
+    padding: 15px 20px;
+    cursor: pointer;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    transition: all 0.3s ease;
+    font-size: 1.3rem;
+}
+
+.sidebar ul li i {
+    font-size: 1.5rem;
+}
+
+.sidebar ul li:hover {
+    background: #f1f2f3;
+    transform: scale(1.05);
+}
+
+.sidebar ul li.active {
+    background: #f39c12;
+    font-weight: bold;
+}
+.main-content {
+    margin-left: 260px;
+    padding: 20px;
+    width: calc(100% - 260px);
+    height: 100vh;
+    overflow-y: auto;
+    transition: margin-left 0.3s ease;
+}
+/* Flying Stars Background */
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('https://www.transparenttextures.com/patterns/stardust.png');
+    animation: stars 50s linear infinite;
+    z-index: -1;
+    opacity: 0.5;
+}
+
+@keyframes stars {
+    from { background-position: 0 0; }
+    to { background-position: -10000px 5000px; }
+}
     </style>
 </head>
 <body>
-    div class="sidebar" id="sidebar">
+    <div class="sidebar" id="sidebar">
         <h2>CRANE MONITOR</h2>
         <ul>
-            <li class="active" onclick="showSection(event, 'dashboard')"><a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+            <li onclick="showSection(event, 'dashboard')"><a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li onclick="showSection(event, 'analytics')"><a href="analytics.html"><i class="fas fa-chart-line"></i> Analytics</a></li>
             <li onclick="showSection(event, 'maintenance')"><a href="Maintenance.html"><i class="fas fa-tools"></i> Maintenance</a></li>
             <li onclick="showSection(event, 'alerts')"><a href="alerts.html"><i class="fas fa-exclamation-triangle"></i> Alerts</a></li>
             <li onclick="showSection(event, 'settings')"><a href="settings.html"><i class="fas fa-cogs"></i> Settings</a></li>
         </ul>
     </div>
-
+    <div class="main-content">
     <div class="container">
         <h1 class="page-title">Crane Monitoring Dashboard</h1>
 
@@ -85,6 +168,7 @@
         <h2>Maintenance Section</h2>
         <p>Maintenance content here...</p>
     </div>
+</div>
 
     <script>
         // JavaScript Code
