--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="sidebar" id="sidebar">
         <h2>CRANE MONITOR</h2>
         <ul>
-            <li class="active" onclick="showSection(event, 'dashboard')"><a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+            <li onclick="showSection(event, 'dashboard')"><a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li onclick="showSection(event, 'analytics')"><a href="analytics.html"><i class="fas fa-chart-line"></i> Analytics</a></li>
             <li onclick="showSection(event, 'maintenance')"><a href="Maintenance.html"><i class="fas fa-tools"></i> Maintenance</a></li>
             <li onclick="showSection(event, 'alerts')"><a href="alerts.html"><i class="fas fa-exclamation-triangle"></i> Alerts</a></li>
