--- a/settings.html
+++ b/settings.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings - Crane Monitor</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         /* General Styles */
         body {
@@ -30,37 +31,87 @@
         .section.active {
             display: block;
         }
+        /* Sidebar */
+.sidebar {
+    width: 260px;
+    background: #f1caa3;
+    color: #dde0e2;
+    height: 100vh;
+    padding: 20px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    box-shadow: 4px 0 10px rgba(229, 12, 12, 0.2);
+    transition: all 0.3s ease;
+}
 
-        /* Sidebar Navigation */
-        .sidebar {
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 200px;
-            height: 100%;
-            background: #007bff;
-            padding-top: 20px;
-        }
+.sidebar h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 1.8rem;
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    color: #232322;
+    padding: 10px 0;
+    border-bottom: 3px solid #272926;
+}
 
-        .sidebar a {
-            display: block;
-            padding: 10px;
-            color: white;
-            text-decoration: none;
-            text-align: center;
-            margin-bottom: 10px;
-        }
+/* Sidebar Navigation */
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+}
 
-        .sidebar a.active {
-            background: #0056b3;
-            font-weight: bold;
-        }
+.sidebar ul li {
+    padding: 15px 20px;
+    cursor: pointer;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    transition: all 0.3s ease;
+    font-size: 1.3rem;
+}
 
-        .main-content {
-            margin-left: 220px;
-            padding: 20px;
-        }
+.sidebar ul li i {
+    font-size: 1.5rem;
+}
 
+.sidebar ul li:hover {
+    background: #f1f2f3;
+    transform: scale(1.05);
+}
+
+.sidebar ul li.active {
+    background: #f39c12;
+    font-weight: bold;
+}
+.main-content {
+    margin-left: 260px;
+    padding: 20px;
+    width: calc(100% - 260px);
+    height: 100vh;
+    overflow-y: auto;
+    transition: margin-left 0.3s ease;
+}
+/* Flying Stars Background */
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('https://www.transparenttextures.com/patterns/stardust.png');
+    animation: stars 50s linear infinite;
+    z-index: -1;
+    opacity: 0.5;
+}
+
+@keyframes stars {
+    from { background-position: 0 0; }
+    to { background-position: -10000px 5000px; }
+}
         /* Dashboard Styles */
         .dashboard {
             display: flex;
@@ -142,12 +193,16 @@
 </head>
 <body>
 
-    <div class="sidebar">
-        <a href="#dashboard" onclick="showSection('dashboard')">Dashboard</a>
-        <a href="#alerts" onclick="showSection('alerts')">Alerts</a>
-        <a href="#settings" onclick="showSection('settings')">Settings</a>
+    <div class="sidebar" id="sidebar">
+        <h2>CRANE MONITOR</h2>
+        <ul>
+            <li onclick="showSection(event, 'dashboard')"><a href="index.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+            <li onclick="showSection(event, 'analytics')"><a href="analytics.html"><i class="fas fa-chart-line"></i> Analytics</a></li>
+            <li onclick="showSection(event, 'maintenance')"><a href="Maintenance.html"><i class="fas fa-tools"></i> Maintenance</a></li>
+            <li onclick="showSection(event, 'alerts')"><a href="alerts.html"><i class="fas fa-exclamation-triangle"></i> Alerts</a></li>
+            <li onclick="showSection(event, 'settings')"><a href="settings.html"><i class="fas fa-cogs"></i> Settings</a></li>
+        </ul>
     </div>
-
     <div class="main-content">
         <div class="content">
             
