--- a/alerts.html
+++ b/alerts.html
@@ -43,6 +43,15 @@
                 <li><i class="fas fa-tools"></i> Brake Pad Wear Warning - 19 Feb, 2025</li>
             </ul>
         </section>
+
+        <!-- 📝 Detailed Alert Information Section -->
+        <section class="alert-details">
+            <h4><i class="fas fa-info-circle"></i> Alert Details & Recommendations</h4>
+            <p><strong>High Wind Speed:</strong> The detected wind speed could affect crane stability. All operations must be paused when wind speed exceeds safety thresholds. Secure all loose components.</p>
+            <p><strong>Tilt Angle Critical:</strong> The crane tilt angle exceeded safe operational limits. Check for uneven ground or mechanical issues causing imbalance.</p>
+            <p><strong>Voltage Fluctuation:</strong> Sudden changes in voltage levels could damage electrical components. Inspect the electrical panel for irregularities and ensure stable power input.</p>
+            <p><strong>Brake Pad Wear:</strong> Worn brake pads can lead to malfunction. Immediate replacement is advised to avoid operational hazards.</p>
+        </section>
     </main>
 </body>
 </html>
