--- a/reports.html
+++ b/reports.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crane Reports - STRIVERS</title>
-    <link rel="stylesheet" href="/reports.css">
+    <link rel="stylesheet" href="reports.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -88,6 +88,6 @@
         </section>
     </main>
 
-    <script src="/reports.js"></script>
+    <script src="reports.js"></script>
 </body>
 </html>
