--- a/electrical.html
+++ b/electrical.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Electrical & Energy - Crane Monitoring | STRIVERS</title>
-    <link rel="stylesheet" href="/electrical.css">
+    <link rel="stylesheet" href="electrical.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -64,6 +64,6 @@
         </section>
     </main>
 
-    <script src="/electrical.js"></script>
+    <script src="electrical.js"></script>
 </body>
 </html>
