--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings - STRIVERS</title>
-    <link rel="stylesheet" href="/settings.css">
+    <link rel="stylesheet" href="settings.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -73,6 +73,6 @@
         </section>
     </main>
 
-    <script src="/settings.js"></script>
+    <script src="settings.js"></script>
 </body>
 </html>
