--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crane Monitoring Dashboard - STRIVERS</title>
-    <link rel="stylesheet" href="/dashboard.css">
+    <link rel="stylesheet" href="dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
@@ -57,6 +57,6 @@
         </ul>
     </div>
 
-    <script src="/dashboard.js"></script>
+    <script src="dashboard.js"></script>
 </body>
 </html>
