--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,7 @@
     <aside class="sidebar">
         <ul>
             <li class="active"><i class="fas fa-tachometer-alt"></i> <a href="dashboard.html">Dashboard</a></li>
-            <li><i class="fas fa-exclamation-triangle"></i><a href="/alerts.html"> Alerts</a></li>
+            <li><i class="fas fa-exclamation-triangle"></i><a href="alerts.html"> Alerts</a></li>
             <li><i class="fas fa-bolt"></i> <a href="electrical.html">Electrical & Energy</a></li>
             <li><i class="fas fa-chart-line"></i> <a href="reports.html">Reports</a></li>
             <li><i class="fas fa-cog"></i> <a href="settings.html">Settings</a></li>
